--- a/Bonzee/Bonzee/Bonzee.vcxproj
+++ b/Bonzee/Bonzee/Bonzee.vcxproj
@@ -80,10 +80,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ai.cpp" />
+    <ClCompile Include="BoardFunctions.cpp" />
+    <ClCompile Include="HeuristicFunctions.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MoveFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ai.h" />
+    <ClInclude Include="BoardFunctions.h" />
+    <ClInclude Include="CommonIncludes.h" />
+    <ClInclude Include="HeuristicFunctions.h" />
+    <ClInclude Include="MoveFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
